--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
             </a>
         </div>
 
+        <div class="topnav">
+            <a href="/course/">سامانه آموزشی</a>
+            <a href="/college/">کالج</a>
+            <a href="/problemset">بانک سوالات</a>
+            <a href="/contest/">مسابقات</a>
+            <a href="/magnet/jobs">کاریابی</a>
+            <a href="https://juniora.ir">جونیورا</a>
+            <a href="/college/bootcamp">بوت‌کمپ
+                <img src="img/fire.png"
+                     style="display: inline; width: 14px; vertical-align: middle; margin-right: 4px;">
+            </a>
+        </div>
+
+
 
     </header>
 </body>
