--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             </div>
         </div>
 
+        <div class="profile">
+            <img class="profileImg" alt="profileImg" src="img/d8.png">
+        </div>
+
     </header>
 </body>
 </html>
