--- a/index.html
+++ b/index.html
@@ -1,42 +1,53 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="fa">
-<head>
-    <meta charset="UTF-8">
-    <title>Quera</title>
-</head>
-<body>
-    <header>
-        <div class="queraLogo">
-            <a href="/">
-                <img class="logo" src="img/logo-quera.svg" alt="Quera">
-            </a>
-        </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Quera</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+            <header>
+                <div class="wrapper">
+                    <div class="items">
+                        <nav>
+                            <ul>
+                                <li id="queraLogo">
+                                    <a href="/">
+                                        <img class="logo" src="img/logo-quera.svg" alt="Quera">
+                                    </a>
+                                </li>
 
-        <div class="topnav">
-            <a href="/course/">سامانه آموزشی</a>
-            <a href="/college/">کالج</a>
-            <a href="/problemset">بانک سوالات</a>
-            <a href="/contest/">مسابقات</a>
-            <a href="/magnet/jobs">کاریابی</a>
-            <a href="https://juniora.ir">جونیورا</a>
-            <a href="/college/bootcamp">بوت‌کمپ
-                <img src="img/fire.png"
-                     style="display: inline; width: 14px; vertical-align: middle; margin-right: 4px;">
-            </a>
-        </div>
+                                <li><a href="/course/">سامانه آموزشی</a></li>
+                                <li><a href="/college/">کالج</a></li>
+                                <li><a href="/problemset">بانک سوالات</a></li>
+                                <li><a href="/contest/">مسابقات</a></li>
+                                <li><a href="/magnet/jobs">کاریابی</a></li>
+                                <li><a href="https://juniora.ir">جونیورا</a></li>
+                                <li>
+                                    <a href="/college/bootcamp">
+                                        <img src="img/fire.png"
+                                             style="display: inline; width: 14px; vertical-align: middle; margin-right: 4px;">
+                                        بوت‌کمپ
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
 
-        <div class="content" tabindex="0">
-            <div class="UoPmmD2tUnQ41xr2PHDk">
-                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" style="font-size: 3em; display: block;"><path fill="none" d="M0 0h24v24H0V0z"></path>
-                    <path d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"></path>
-                </svg>
-            </div>
-        </div>
+                        <div class="leftSide">
+                            <div class="bell" tabindex="0">
+                                <div class="UoPmmD2tUnQ41xr2PHDk">
+                                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 38 24" height="1em" width="1em" style="font-size: 3em; display: block;"><path fill="none" d="M0 0h24v24H0V0z"></path>
+                                        <path d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"></path>
+                                    </svg>
+                                </div>
+                            </div>
 
-        <div class="profile">
-            <img class="profileImg" alt="profileImg" src="img/d8.png">
-        </div>
+                            <img class="profileImg" alt="profileImg" src="img/profile.png">
+                        </div>
+                    </div>
+                </div>
+            </header>
 
-    </header>
-</body>
+    </body>
 </html>
