--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                                 <li><a href="/magnet/jobs">کاریابی</a></li>
                                 <li><a href="https://juniora.ir">جونیورا</a></li>
                                 <li>
-                                    <a href="/college/bootcamp">
-                                        <img src="img/fire.png"
-                                             style="display: inline; width: 14px; vertical-align: middle; margin-right: 4px;">
+                                    <a id="fire" href="/college/bootcamp">
+                                        <img src="img/fire.png">
+
                                         بوت‌کمپ
                                     </a>
                                 </li>
