--- a/index.html
+++ b/index.html
@@ -59,8 +59,17 @@
             <div class="banner">
                 banner
             </div>
-            <div class="content">
-                content
+            <div class="content1">
+                content1
+            </div>
+            <div class="content2">
+                content2
+            </div>
+            <div class="content3">
+                content3
+            </div>
+            <div class="content4">
+                content4
             </div>
             <div class="sidebar">
                 sidebar
