--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
             <div class="banner">
-                banner
+                <img src="img/banner.png">
             </div>
             <div class="content1">
                 content1
