--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Quera</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div class="container">
@@ -59,12 +60,68 @@
             <div class="banner">
                 <img src="img/banner.png">
             </div>
-            <div class="content1">
-                content1
+
+            <div class="college">
+                <div class="flexContainer">
+                    <div class="learning">
+                        <img src="img/learning.svg" alt="learning">
+                        <p>یادگیری در کالج</p>
+                    </div>
+                    <a class="flexContainera" href="/college">همه کالج‌ها</a>
+                </div>
+                <div class="cardContainer">
+                    <div class="collegeCardContainer">
+                        <div class="collegeCard">
+                            <img src="img/collegeImg1.svg" alt="collegeImg1">
+                            <p>نمره بهتر در امتحانات</p>
+                        </div>
+                        <div class="collegeCard">
+                            <img src="img/collegeImg2.svg" alt="collegeImg2">
+                            <p>آمادگی برای استخدام</p>
+                        </div>
+                        <div class="collegeCard">
+                            <img src="img/collegeImg3.svg" alt="collegeImg3">
+                            <p>رتبه‌ برتر در مسابقات</p>
+                        </div>
+                    </div>
+                    <div class="des">
+                        <div class="desItem">
+                            <img src="img/desImg1.svg" alt="desImg1">
+                            <p>آموزش کاربردی</p>
+                        </div>
+                        <div class="desItem">
+                            <img src="img/desImg2.svg" alt="desImg2">
+                            <p>تمرین و تجربه</p>
+                        </div>
+                        <div class="desItem">
+                            <img src="img/desImg3.svg" alt="desImg3">
+                            <p>رفع‌اشکال</p>
+                        </div>
+                        <div class="desItem">
+                            <img src="img/desImg4.svg" alt="desImg4">
+                            <p>گواهی معتبر</p>
+                        </div>
+                    </div>
+                    <div class="collegeTag">
+                        <p>شروع برنامه نویسی</p>
+                        <p>Python</p>
+                        <p>C++</p>
+                        <p>لینوکس</p>
+                        <p>Data & ML</p>
+                        <p>ساختمان داده</p>
+                        <p>React</p>
+                    </div>
+                    <div class="course">
+                        <a href="course">مشاهده دوره ها</a>
+                        <p>بیش از 29935 نفر تاکنون به دوره های کوئراکالج اعتماد کرده اند</p>
+                    </div>
+
+                </div>
             </div>
-            <div class="content2">
-                content2
+            <div class="competition">
+
             </div>
+
             <div class="content3">
                 content3
             </div>
