--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 
 
             <div class="banner">
-                <img src="img/banner.png">
+                <img src="img/banner.png" alt="banner">
             </div>
 
             <div class="college">
                 <div class="flexContainer">
-                    <div class="learning">
+                    <div class="cardTopic">
                         <img src="img/learning.svg" alt="learning">
                         <p>یادگیری در کالج</p>
                     </div>
-                    <a class="flexContainera" href="/college">همه کالج‌ها</a>
+                    <a href="/college">همه کالج‌ها</a>
                 </div>
                 <div class="cardContainer">
                     <div class="collegeCardContainer">
@@ -118,14 +118,73 @@
 
                 </div>
             </div>
+
             <div class="competition">
-
+                <div class="flexContainer">
+                    <div class="cardTopic">
+                        <img src="img/competition.svg" alt="competition">
+                        <p>رقابت در مسابقات</p>
+                    </div>
+                    <a href="/competition">همه مسابقات</a>
+                </div>
+                <div class="cardContainer">
+                    <div class="competitionContent">
+                        <p>در حال حاضر مسابقه فعالی وجود ندارد. می توانید سوالات مسابقات برگزار شده را در قسمت سوالات حل کنید</p>
+                        <a class="questionsBank" href="/questionsBank">بانک سوالات</a>
+                        <p>
+                            برای مطلع شدن از آخرین اخبار مسابقات به کانال
+                            <a class="blueLink" href="/telegram">تلگرام</a>
+                            ما بپیوندید.
+                        </p>
+                    </div>
+                </div>
             </div>
 
-            <div class="content3">
-                content3
+            <div class="lms">
+                <div class="flexContainer">
+                    <div class="cardTopic">
+                        <img src="img/lms.svg" alt="lms">
+                        <p>سامانه آموزشی (LMS)</p>
+                    </div>
+                    <a href="/lms">همه کلاس ها</a>
+                </div>
+                <div class="cardContainer">
+                    <div class="lmsContent">
+                        <div class="lmsSec">
+                            <a class="blueLink" href="/advPro">برنامه سازی پیشرفته</a>
+                            <div class="detail">
+                                <p>پاییز 00-99</p>
+                                <p class="detailRightBorder">26 عضو</p>
+                            </div>
+                        </div>
+                        <div class="lmsSecondSec">
+                            <div class="lmsSec">
+                                <a class="blueLink" href="/advPro">مبانی کامپیوتر و برنامه سازی</a>
+                                <div class="detail">
+                                    <p>پاییز 98-97</p>
+                                    <p class="detailRightBorder">26 عضو</p>
+                                </div>
+                            </div>
+                            <p class="ex">
+                                آخرین تمرین:
+                                <a href="/Ex9">تمرین سری نهم</a>
+                            </p>
+                        </div>
+                        <div class="lmsThirdSec">
+                            <p>آموزش الگوریتم</p>
+                            <p class="ex">آخرین تمرین:
+                                <a href="/secondChapter">فصل دو</a>
+                            </p>
+                        </div>
+                        <div class="lmsLastSec">
+                            <a class="blueLink" id="more" href="/more">مشاهده بیشتر</a>
+                        </div>
+
+                    </div>
+                </div>
             </div>
-            <div class="content4">
+
+            <div class="exQuestionBank">
                 content4
             </div>
             <div class="sidebar">
