--- a/index.html
+++ b/index.html
@@ -185,8 +185,51 @@
             </div>
 
             <div class="exQuestionBank">
-                content4
+                <div class="flexContainer">
+                    <div class="cardTopic">
+                        <img src="img/exQuestionBank.svg" alt="exQuestionBank">
+                        <p>تمرین بیشتر در بانک سوالات</p>
+                    </div>
+                    <a href="/exQuestionBank">همه سوالات</a>
+                </div>
+                <div class="cardContainer">
+                    <p class="exQuestionBankCardTopic">تعداد سوال حل شده</p>
+                    <div class="exQuestionBankCards">
+                        <div class="exQuestionBankCard">
+                            <p>0</p>
+                            <a href="#">تکنولوژی</a>
+                        </div>
+                        <div class="exQuestionBankCard">
+                            <p>0</p>
+                            <a href="#">مسابقه</a>
+                        </div>
+                        <div class="exQuestionBankCard">
+                            <p>0</p>
+                            <a href="#">دانشگاهی</a>
+                        </div>
+                        <div class="exQuestionBankCard">
+                            <p>0</p>
+                            <a href="#">المپیاد</a>
+                        </div>
+                    </div>
+                    <p class="exQuestionBankCardTopic">سوالات پیشنهادی</p>
+                    <div class="questions">
+                        <div class="question">
+                            <a href="#">عدد خودمقلوب</a>
+                            <p>ساده</p>
+                        </div>
+                        <div class="question questionTow">
+                            <a href="#">باگ کد مجید</a>
+                            <p>متوسط</p>
+                        </div>
+                        <div class="question">
+                            <a href="#">Ansible & MySQL</a>
+                            <p>سخت</p>
+                        </div>
+                    </div>
+                </div>
             </div>
+
             <div class="sidebar">
                 sidebar
             </div>
