--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                 </div>
             </header>
 
-
             <div class="banner">
                 <img src="img/banner.png" alt="banner">
             </div>
@@ -177,7 +176,7 @@
                             </p>
                         </div>
                         <div class="lmsLastSec">
-                            <a class="blueLink" id="more" href="/more">مشاهده بیشتر</a>
+                            <a class="blueLink more" href="/more">مشاهده بیشتر</a>
                         </div>
 
                     </div>
@@ -231,8 +230,67 @@
             </div>
 
             <div class="sidebar">
-                sidebar
+                <div class="sidebarRow">
+                    <div class="cardTopic">
+                        <p id="resumeTopic">تکمیل رزومه</p>
+                    </div>
+                    <div class="sidebarCard">
+                        <div id="percent">
+                            <img src="img/resume.png" alt="resume">
+                            <div id="percentDetail">
+                                <p id="bluePercent">5%</p>
+                                <p class="sidebarSecSm">پیشرفت در تکمیل</p>
+                            </div>
+                        </div>
+                        <p class="sidebarSecMed">پروفایل تخصصی خود را کامل کنید و مهارت و تجربه تان را به شرکت های حوزه IT نشان دهید.</p>
+                        <div id="resumeLink">
+                            <p class="sidebarSecSm">معرفی رزومه ساز کوئرا</p>
+                            <a class="questionsBank" href="/resume">ورود به رزومه ساز</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="sidebarRow">
+                    <div class="cardTopic">
+                        <p>آخرین مطالب بلاگ</p>
+                    </div>
+                    <div class="sidebarCard">
+                        <div class="sidebarSec">
+                            <p class="sidebarSecMed">آموزش برنامه نویسی به کودکان و نوجوانان با جونیورا</p>
+                            <p class="sidebarSecSm">19 تیر 1402</p>
+                        </div>
+                        <div class="sidebarSec">
+                            <p class="sidebarSecMed">مسابقه برنامه نویسی پردیس کد</p>
+                            <p class="sidebarSecSm">21 خرداد 1402</p>
+                        </div>
+                        <a class="blueLink more" href="/more">مشاهده بیشتر</a>
+                    </div>
+                </div>
+                <div class="sidebarRow">
+                    <div class="cardTopic">
+                        <p>فرصت های شغلی پیشنهادی</p>
+                    </div>
+                    <div class="sidebarCard">
+                        <div class="sidebarSec">
+                            <p class="sidebarSecMed">کارشناس الکترونیک</p>
+                            <p class="sidebarSecSm">رهروان سپهر اندیشه</p>
+                        </div>
+                        <div class="sidebarSec">
+                            <p class="sidebarSecMed">کارشناس DevOps</p>
+                            <p class="sidebarSecSm">Dosma</p>
+                        </div>
+                        <div class="sidebarSec">
+                            <p class="sidebarSecMed">برنامه نویس Full Stack</p>
+                            <p class="sidebarSecSm">رایمون فناور آریان</p>
+                        </div>
+                        <div class="sidebarSec">
+                            <p class="sidebarSecMed">متخصص هوش مصنوعی (تهران - صادقیه)</p>
+                            <p class="sidebarSecSm">پروژه های پیشرفته هوش مصنوعی نواندیشان پارس</p>
+                        </div>
+                        <a class="blueLink more" href="/more">مشاهده بیشتر</a>
+                    </div>
+                </div>
             </div>
+
             <footer>
                 footer
             </footer>
