Add footer sections

--- a/index.html
+++ b/index.html
@@ -292,7 +292,45 @@
             </div>
 
             <footer>
-                footer
+                <div class="container">
+                    <div class="row">
+                        <div class="footerCol">
+                            <a href="/quera">
+                                <img id="queraImg" src="img/quera.svg" alt="quera">
+                            </a>
+                        </div>
+                        <div class="footerCol">
+                            <h4></h4>
+                            <ul>
+
+                            </ul>
+                        </div>
+                        <div class="footerCol">
+                            <h4></h4>
+                            <ul>
+
+                            </ul>
+                        </div>
+                        <div class="footerCol">
+                            <h4></h4>
+                            <ul>
+
+                            </ul>
+                        </div>
+                        <div class="footerCol">
+                            <h4></h4>
+                            <ul>
+
+                            </ul>
+                        </div>
+                        <div class="footerCol">
+                            <h4></h4>
+                            <ul>
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </footer>
         </div>
     </body>
