--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <p>React</p>
                     </div>
                     <div class="course">
-                        <a href="course">مشاهده دوره ها</a>
+                        <a href="/course">مشاهده دوره ها</a>
                         <p>بیش از 29935 نفر تاکنون به دوره های کوئراکالج اعتماد کرده اند</p>
                     </div>
 
@@ -129,7 +129,9 @@
                 <div class="cardContainer">
                     <div class="competitionContent">
                         <p>در حال حاضر مسابقه فعالی وجود ندارد. می توانید سوالات مسابقات برگزار شده را در قسمت سوالات حل کنید</p>
-                        <a class="questionsBank" href="/questionsBank">بانک سوالات</a>
+                        <div class="setCenter">
+                            <a class="questionsBank" href="/questionsBank">بانک سوالات</a>
+                        </div>
                         <p>
                             برای مطلع شدن از آخرین اخبار مسابقات به کانال
                             <a class="blueLink" href="/telegram">تلگرام</a>
@@ -171,12 +173,13 @@
                         </div>
                         <div class="lmsThirdSec">
                             <p>آموزش الگوریتم</p>
-                            <p class="ex">آخرین تمرین:
+                            <p class="ex">
+                                آخرین تمرین:
                                 <a href="/secondChapter">فصل دو</a>
                             </p>
                         </div>
-                        <div class="lmsLastSec">
-                            <a class="blueLink more" href="/more">مشاهده بیشتر</a>
+                        <div class="more">
+                            <a class="blueLink" href="/more">مشاهده بیشتر</a>
                         </div>
 
                     </div>
@@ -286,7 +289,9 @@
                             <p class="sidebarSecMed">متخصص هوش مصنوعی (تهران - صادقیه)</p>
                             <p class="sidebarSecSm">پروژه های پیشرفته هوش مصنوعی نواندیشان پارس</p>
                         </div>
-                        <a class="blueLink more" href="/more">مشاهده بیشتر</a>
+                        <div class="more">
+                            <a class="blueLink" href="/more">مشاهده بیشتر</a>
+                        </div>
                     </div>
                 </div>
             </div>
